<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/svMain"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="140dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="120dp"
            android:background="@drawable/white_logo" />

        <TextView
            android:id="@+id/title"
            style="@style/Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/hello" />

        <TextView
            android:id="@+id/description"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/create_new_account" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <io.horizontalsystems.bankwallet.ui.extensions.InputView
                android:id="@+id/firstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:inputType="text" />

            <io.horizontalsystems.bankwallet.ui.extensions.InputView
                android:id="@+id/lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <io.horizontalsystems.bankwallet.ui.extensions.InputView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/phone"
            android:inputType="number" />

        <io.horizontalsystems.bankwallet.ui.extensions.InputView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <io.horizontalsystems.bankwallet.ui.extensions.InputView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <io.horizontalsystems.bankwallet.ui.extensions.InputView
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/dark_round_corner_button"
            android:text="@string/Button_Create"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>
