<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/registrationIcon"
            android:layout_width="140dp"
            android:layout_marginHorizontal="10dp"
            android:layout_height="120dp"
            android:background="@drawable/white_logo"/>

        <TextView
            android:id="@+id/title"
            style="@style/Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Welcome Back" />

        <TextView
            android:id="@+id/description"
            style="@style/Body"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="Lets login" />



        <io.horizontalsystems.bankwallet.ui.extensions.InputView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <io.horizontalsystems.bankwallet.ui.extensions.InputView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/dark_round_corner_button"
            android:text="@string/Button_Login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/forgot_password" />

    </LinearLayout>

</ScrollView>
