<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/introLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:clickable="true">

    <ImageView
        android:id="@+id/walletIcon"
        android:layout_width="90dp"
        android:visibility="gone"
        android:layout_height="80dp"
        android:background="@drawable/no_wallet"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/noWalletText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_chainStyle="packed" />

    <!--style="@style/Subhead1"-->

    <TextView
        android:id="@+id/noWalletText"
        style="@style/Headline1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="138dp"
        android:background="?selectableItemBackground"
        android:text="@string/setup_security"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnSetup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletIcon" />

    <Button
        android:id="@+id/btnSetup"
        android:layout_width="0dp"
        android:background="@drawable/dark_round_corner_button"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_setup"
        app:layout_constraintBottom_toTopOf="@+id/btnNotNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNotNow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button_not_now"
        android:background="@drawable/gray_round_corner_button"
        android:textColor="@color/dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
